Changed SVG to DIV with Radius

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -35,6 +35,99 @@
         </div>
         <div class="col-1"></div>
     </div>
+        <!-- Text needs to be fixed -->
+    <div class="row align-items-center text-center justify-content-center">
+        <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>DESIGN</span></div>
+        <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>DEVELOP</span></div>
+        <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>SUPPORT</span></div>
+        <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>HOST</span></div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--<div class="row justify-content-center pt-5">-->
+        <!--&lt;!&ndash;<div class="col-2 d-none d-sm-block"></div>&ndash;&gt;-->
+
+        <!--<div class="icon-spacing col d-flex flex-row-reverse pr-5 p-sm-0">-->
+            <!--<svg height="105px" width="105px" class="icons" id="design">-->
+
+            <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#E6563B" />-->
+            <!--<text x="27" y="59" fill="white">DESIGN</text>-->
+            <!--Sorry, your browser does not support inline SVG.-->
+        <!--</svg>-->
+        <!--</div>-->
+        <!--<div class="icon-spacing col pl-5 p-sm-0">-->
+            <!--<svg height="105px" width="105px" class="icons" id="develop">-->
+
+                <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#EB9D3A" />-->
+                <!--<text x="22" y="59" fill="white">DEVELOP</text>-->
+                <!--Sorry, your browser does not support inline SVG.-->
+            <!--</svg>-->
+        <!--</div>-->
+        <!--<div class="w-100 d-sm-none"></div>-->
+        <!--<div class="icon-spacing col d-flex flex-row-reverse pr-5 pt-5 p-sm-0">-->
+            <!--<svg height="105px" width="105px" class="icons" id="support">-->
+
+                <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#7CB06C" />-->
+                <!--<text x="20" y="59" fill="white">SUPPORT</text>-->
+                <!--Sorry, your browser does not support inline SVG.-->
+            <!--</svg>-->
+        <!--</div>-->
+        <!--<div class="icon-spacing col pl-5 pt-5 p-sm-0">-->
+            <!--<svg height="105px" width="105px" class="icons" id="host">-->
+
+                <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#00ABA9" />-->
+                <!--<text x="34" y="59" fill="white">HOST</text>-->
+                <!--Sorry, your browser does not support inline SVG.-->
+            <!--</svg>-->
+        <!--</div>-->
+
+        <!--&lt;!&ndash;<div class="col-2 d-none d-sm-block"></div>&ndash;&gt;-->
+
+    <!--</div>-->
+
+
+
+
+
+
+    <!--<svg height="105px" width="105px" id="design">-->
+
+        <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#E6563B" />-->
+        <!--<text x="27" y="59" fill="white">DESIGN</text>-->
+        <!--Sorry, your browser does not support inline SVG.-->
+    <!--</svg>-->
+
+    <!--<svg height="105px" width="105px" id="develop">-->
+
+        <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#EB9D3A" />-->
+        <!--<text x="22" y="59" fill="white">DEVELOP</text>-->
+        <!--Sorry, your browser does not support inline SVG.-->
+    <!--</svg>-->
+
+    <!--<svg height="105px" width="105px" id="support">-->
+
+        <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#7CB06C" />-->
+        <!--<text x="20" y="59" fill="white">SUPPORT</text>-->
+        <!--Sorry, your browser does not support inline SVG.-->
+    <!--</svg>-->
+
+    <!--<svg height="105px" width="105px" id="host">-->
+
+        <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#00ABA9" />-->
+        <!--<text x="34" y="59" fill="white">HOST</text>-->
+        <!--Sorry, your browser does not support inline SVG.-->
+    <!--</svg>-->
 
 
     <div class="d-block">xs</div>
