created structure for page content and added the first row of content

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -13,7 +13,7 @@
 <body>
 
 
-<div class="container-fluid">
+<div class="container">
     <!--Main Header xs-->
     <div class="row justify-content-center">
 
@@ -27,7 +27,7 @@
         </div>
         <div class="col-lg-1 d-none d-md-block"></div>
     </div>
-    
+
     <div class="row justify-content-center pt-4">
         <div class="col-1"></div>
         <div class="col-10">
@@ -35,7 +35,7 @@
         </div>
         <div class="col-1"></div>
     </div>
-        <!-- Text needs to be fixed -->
+    <!-- Text needs to be fixed -->
     <div class="row align-items-center text-center justify-content-center">
         <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>DESIGN</span></div>
         <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>DEVELOP</span></div>
@@ -44,89 +44,163 @@
 
     </div>
 
+    <div class="row justify-content-center">
+        <div class="col">
+            <hr>
+        </div>
+    </div>
 
+    <div class="row pt-lg-5">
+        <div class="col-lg-8">
+            <p>SELECTED WORK</p>
+        </div>
+        <div class="col-lg-4">
+            <p>THE LAST</p>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <img src="img/apple-ipad.jpg" alt="" class="mx-auto d-block">
+                            <p class="ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
+                            <span class="text-right ml-lg-5 align-text-top">
+                                <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
 
+                                <svg height="18px" width="18px" id="orange_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#ED9D3A"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
 
+                                <svg height="18px" width="18px" id="green_s" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#7CB06C"/>
+                                  <text x="6.5" y="13" fill="black">S</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
 
+                                <svg height="18px" width="18px" id="teal_h" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#00ABA9"/>
+                                  <text x="6.5" y="13" fill="black">H</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+                            </span>
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="img/macbook.jpg" alt="" class="mx-auto d-block">
+                            <p class="ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
+                            <span class="text-right ml-lg-5 align-text-top">
+                                <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
 
+                                <svg height="18px" width="18px" id="orange_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#ED9D3A"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
 
+                                <svg height="18px" width="18px" id="green_s" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#7CB06C"/>
+                                  <text x="6.5" y="13" fill="black">S</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
 
+                                <svg height="18px" width="18px" id="teal_h" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#00ABA9"/>
+                                  <text x="6.5" y="13" fill="black">H</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-12">
 
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4"></div>
+    </div>
 
 
     <!--<div class="row justify-content-center pt-5">-->
-        <!--&lt;!&ndash;<div class="col-2 d-none d-sm-block"></div>&ndash;&gt;-->
+    <!--&lt;!&ndash;<div class="col-2 d-none d-sm-block"></div>&ndash;&gt;-->
 
-        <!--<div class="icon-spacing col d-flex flex-row-reverse pr-5 p-sm-0">-->
-            <!--<svg height="105px" width="105px" class="icons" id="design">-->
+    <!--<div class="icon-spacing col d-flex flex-row-reverse pr-5 p-sm-0">-->
+    <!--<svg height="105px" width="105px" class="icons" id="design">-->
 
-            <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#E6563B" />-->
-            <!--<text x="27" y="59" fill="white">DESIGN</text>-->
-            <!--Sorry, your browser does not support inline SVG.-->
-        <!--</svg>-->
-        <!--</div>-->
-        <!--<div class="icon-spacing col pl-5 p-sm-0">-->
-            <!--<svg height="105px" width="105px" class="icons" id="develop">-->
+    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#E6563B" />-->
+    <!--<text x="27" y="59" fill="white">DESIGN</text>-->
+    <!--Sorry, your browser does not support inline SVG.-->
+    <!--</svg>-->
+    <!--</div>-->
+    <!--<div class="icon-spacing col pl-5 p-sm-0">-->
+    <!--<svg height="105px" width="105px" class="icons" id="develop">-->
 
-                <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#EB9D3A" />-->
-                <!--<text x="22" y="59" fill="white">DEVELOP</text>-->
-                <!--Sorry, your browser does not support inline SVG.-->
-            <!--</svg>-->
-        <!--</div>-->
-        <!--<div class="w-100 d-sm-none"></div>-->
-        <!--<div class="icon-spacing col d-flex flex-row-reverse pr-5 pt-5 p-sm-0">-->
-            <!--<svg height="105px" width="105px" class="icons" id="support">-->
+    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#EB9D3A" />-->
+    <!--<text x="22" y="59" fill="white">DEVELOP</text>-->
+    <!--Sorry, your browser does not support inline SVG.-->
+    <!--</svg>-->
+    <!--</div>-->
+    <!--<div class="w-100 d-sm-none"></div>-->
+    <!--<div class="icon-spacing col d-flex flex-row-reverse pr-5 pt-5 p-sm-0">-->
+    <!--<svg height="105px" width="105px" class="icons" id="support">-->
 
-                <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#7CB06C" />-->
-                <!--<text x="20" y="59" fill="white">SUPPORT</text>-->
-                <!--Sorry, your browser does not support inline SVG.-->
-            <!--</svg>-->
-        <!--</div>-->
-        <!--<div class="icon-spacing col pl-5 pt-5 p-sm-0">-->
-            <!--<svg height="105px" width="105px" class="icons" id="host">-->
+    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#7CB06C" />-->
+    <!--<text x="20" y="59" fill="white">SUPPORT</text>-->
+    <!--Sorry, your browser does not support inline SVG.-->
+    <!--</svg>-->
+    <!--</div>-->
+    <!--<div class="icon-spacing col pl-5 pt-5 p-sm-0">-->
+    <!--<svg height="105px" width="105px" class="icons" id="host">-->
 
-                <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#00ABA9" />-->
-                <!--<text x="34" y="59" fill="white">HOST</text>-->
-                <!--Sorry, your browser does not support inline SVG.-->
-            <!--</svg>-->
-        <!--</div>-->
+    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#00ABA9" />-->
+    <!--<text x="34" y="59" fill="white">HOST</text>-->
+    <!--Sorry, your browser does not support inline SVG.-->
+    <!--</svg>-->
+    <!--</div>-->
 
-        <!--&lt;!&ndash;<div class="col-2 d-none d-sm-block"></div>&ndash;&gt;-->
+    <!--&lt;!&ndash;<div class="col-2 d-none d-sm-block"></div>&ndash;&gt;-->
 
     <!--</div>-->
 
 
-
-
-
-
     <!--<svg height="105px" width="105px" id="design">-->
 
-        <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#E6563B" />-->
-        <!--<text x="27" y="59" fill="white">DESIGN</text>-->
-        <!--Sorry, your browser does not support inline SVG.-->
+    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#E6563B" />-->
+    <!--<text x="27" y="59" fill="white">DESIGN</text>-->
+    <!--Sorry, your browser does not support inline SVG.-->
     <!--</svg>-->
 
     <!--<svg height="105px" width="105px" id="develop">-->
 
-        <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#EB9D3A" />-->
-        <!--<text x="22" y="59" fill="white">DEVELOP</text>-->
-        <!--Sorry, your browser does not support inline SVG.-->
+    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#EB9D3A" />-->
+    <!--<text x="22" y="59" fill="white">DEVELOP</text>-->
+    <!--Sorry, your browser does not support inline SVG.-->
     <!--</svg>-->
 
     <!--<svg height="105px" width="105px" id="support">-->
 
-        <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#7CB06C" />-->
-        <!--<text x="20" y="59" fill="white">SUPPORT</text>-->
-        <!--Sorry, your browser does not support inline SVG.-->
+    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#7CB06C" />-->
+    <!--<text x="20" y="59" fill="white">SUPPORT</text>-->
+    <!--Sorry, your browser does not support inline SVG.-->
     <!--</svg>-->
 
     <!--<svg height="105px" width="105px" id="host">-->
 
-        <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#00ABA9" />-->
-        <!--<text x="34" y="59" fill="white">HOST</text>-->
-        <!--Sorry, your browser does not support inline SVG.-->
+    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#00ABA9" />-->
+    <!--<text x="34" y="59" fill="white">HOST</text>-->
+    <!--Sorry, your browser does not support inline SVG.-->
     <!--</svg>-->
 
 
@@ -136,8 +210,6 @@
     <div class="d-none d-lg-block">lg</div>
     <div class="d-none d-xl-block">xl</div>
 </div>
-
-
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -151,3 +223,32 @@
         crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+<!--<svg height="18px" width="18px" id="red_d">-->
+
+<!--<circle cx="9" cy="9" r="9px" fill="#E6563B" />-->
+<!--<text x="6.5" y="13" fill="black">D</text>-->
+<!--Sorry, your browser does not support inline SVG.-->
+<!--</svg>-->
+
+<!--<svg height="18px" width="18px" id="orange_d">-->
+
+<!--<circle cx="9" cy="9" r="9px" fill="#ED9D3A" />-->
+<!--<text x="6.5" y="13" fill="black">D</text>-->
+<!--Sorry, your browser does not support inline SVG.-->
+<!--</svg>-->
+
+<!--<svg height="18px" width="18px" id="green_s">-->
+
+<!--<circle cx="9" cy="9" r="9px" fill="#7CB06C" />-->
+<!--<text x="6.5" y="13" fill="black">S</text>-->
+<!--Sorry, your browser does not support inline SVG.-->
+<!--</svg>-->
+
+<!--<svg height="18px" width="18px" id="teal_h">-->
+
+<!--<circle cx="9" cy="9" r="9px" fill="#00ABA9" />-->
+<!--<text x="6.5" y="13" fill="black">H</text>-->
+<!--Sorry, your browser does not support inline SVG.-->
+<!--</svg>-->
