fixed span icons alignment on large screens

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -67,7 +67,7 @@
                         <div class="col-lg-6">
                             <img src="img/apple-ipad.jpg" alt="" class="mx-auto d-block">
                             <p class="ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
-                            <span class="text-right ml-lg-5 align-text-top">
+                            <span class="text-right ml-xl-5 align-text-top">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
                                   <text x="6.5" y="13" fill="black">D</text>
@@ -96,7 +96,7 @@
                         <div class="col-lg-6">
                             <img src="img/macbook.jpg" alt="" class="mx-auto d-block">
                             <p class="ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
-                            <span class="text-right ml-lg-5 align-text-top">
+                            <span class="text-right ml-xl-5 align-text-top">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
                                   <text x="6.5" y="13" fill="black">D</text>
