--- a/codeup-design.html
+++ b/codeup-design.html
@@ -51,22 +51,22 @@
     </div>
 
     <div class="row pt-lg-5">
-        <div class="col-lg-8">
+        <div class="col-md-8">
             <p>SELECTED WORK</p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4">
             <p>THE LAST</p>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-md-8">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-md-12">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <img src="img/apple-ipad.jpg" alt="" class="mx-auto d-block">
-                            <p class="ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
+                            <p class="featured ml-md-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
                             <span class="text-right ml-xl-5 align-text-top">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
@@ -93,9 +93,9 @@
                                 </svg>
                             </span>
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-md-6">
                             <img src="img/macbook.jpg" alt="" class="mx-auto d-block">
-                            <p class="ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
+                            <p class="featured ml-md-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
                             <span class="text-right ml-xl-5 align-text-top">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
@@ -124,12 +124,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12">
+                <div class="col-md-12">
 
                 </div>
             </div>
         </div>
-        <div class="col-lg-4"></div>
+        <div class="col-md-4"></div>
     </div>
 
 
