Added classes to each DIV DESIGN/DEVELOP/SUPPORT/HOST, Placed twitter logo to img folder

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -35,12 +35,16 @@
         </div>
         <div class="col-1"></div>
     </div>
-    <!-- Text needs to be fixed -->
+    <!-- Added classes to each DIV DESIGN/DEVELOP/SUPPORT/HOST-->
     <div class="row align-items-center text-center justify-content-center">
-        <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>DESIGN</span></div>
-        <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>DEVELOP</span></div>
-        <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>SUPPORT</span></div>
-        <div class="col-xl-1 icons m-3 rounded-circle border border-white text-white"><span>HOST</span></div>
+        <div class="col-xl-1 icons ic-design m-3 rounded-circle border border-white text-white">
+            <span>DESIGN</span></div>
+        <div class="col-xl-1 icons ic-develop m-3 rounded-circle border border-white text-white">
+            <span>DEVELOP</span></div>
+        <div class="col-xl-1 icons ic-support m-3 rounded-circle border border-white text-white">
+            <span>SUPPORT</span></div>
+        <div class="col-xl-1 icons ic-host m-3 rounded-circle border border-white text-white">
+            <span>HOST</span></div>
 
     </div>
 
