Finished lower left 'Selected Work' section

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div class="row pt-lg-5">
+    <div class="row pt-md-5">
         <div class="col-md-8">
             <p>SELECTED WORK</p>
         </div>
@@ -65,13 +65,11 @@
 
     <div class="row">
         <div class="col-md-8">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <img src="img/apple-ipad.jpg" alt="" class="mx-auto d-block">
-                            <p class="featured ml-md-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
-                            <span class="text-right ml-xl-5 align-text-top">
+            <div class="row mb-md-5">
+                <div class="col-md-6">
+                    <img src="img/apple-ipad.jpg" alt="" class="mx-auto d-block">
+                    <p class="featured ml-md-2 ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
+                    <span class="text-right ml-md-3 ml-lg-0 ml-xl-5 align-text-top">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
                                   <text x="6.5" y="13" fill="black">D</text>
@@ -96,44 +94,101 @@
                                   Sorry, your browser does not support inline SVG.
                                 </svg>
                             </span>
-                        </div>
-                        <div class="col-md-6">
-                            <img src="img/macbook.jpg" alt="" class="mx-auto d-block">
-                            <p class="featured ml-md-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
-                            <span class="text-right ml-xl-5 align-text-top">
-                                <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
-                                  <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
-                                  <text x="6.5" y="13" fill="black">D</text>
-                                  Sorry, your browser does not support inline SVG.
-                                </svg>
-
-                                <svg height="18px" width="18px" id="orange_d" class="small-icons mt-lg-2">
-                                  <circle cx="9" cy="9" r="9px" fill="#ED9D3A"/>
-                                  <text x="6.5" y="13" fill="black">D</text>
-                                  Sorry, your browser does not support inline SVG.
-                                </svg>
-
-                                <svg height="18px" width="18px" id="green_s" class="small-icons mt-lg-2">
-                                  <circle cx="9" cy="9" r="9px" fill="#7CB06C"/>
-                                  <text x="6.5" y="13" fill="black">S</text>
-                                  Sorry, your browser does not support inline SVG.
-                                </svg>
-
-                                <svg height="18px" width="18px" id="teal_h" class="small-icons mt-lg-2">
-                                  <circle cx="9" cy="9" r="9px" fill="#00ABA9"/>
-                                  <text x="6.5" y="13" fill="black">H</text>
-                                  Sorry, your browser does not support inline SVG.
-                                </svg>
-                            </span>
-                        </div>
-                    </div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-6">
+                    <img src="img/macbook.jpg" alt="" class="mx-auto d-block">
+                    <p class="featured ml-md-2 ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
+                    <span class="text-right ml-md-3 ml-lg-0 ml-xl-5 align-text-top">
+                                <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
 
+                                <svg height="18px" width="18px" id="orange_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#ED9D3A"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+
+                                <svg height="18px" width="18px" id="green_s" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#7CB06C"/>
+                                  <text x="6.5" y="13" fill="black">S</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+
+                                <svg height="18px" width="18px" id="teal_h" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#00ABA9"/>
+                                  <text x="6.5" y="13" fill="black">H</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+                            </span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/man.jpg" alt="" class="mx-auto d-block">
+                    <p class="featured ml-md-2 ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
+                    <span class="text-right ml-md-3 ml-lg-0 ml-xl-5 align-text-top">
+                                <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+
+                                <svg height="18px" width="18px" id="orange_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#ED9D3A"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+
+                                <svg height="18px" width="18px" id="green_s" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#7CB06C"/>
+                                  <text x="6.5" y="13" fill="black">S</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+
+                                <svg height="18px" width="18px" id="teal_h" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#00ABA9"/>
+                                  <text x="6.5" y="13" fill="black">H</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+                            </span>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/security.jpg" alt="" class="mx-auto d-block">
+                    <p class="featured ml-md-2 ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
+                    <span class="text-right ml-md-3 ml-lg-0 ml-xl-5 align-text-top">
+                                <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+
+                                <svg height="18px" width="18px" id="orange_d" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#ED9D3A"/>
+                                  <text x="6.5" y="13" fill="black">D</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+
+                                <svg height="18px" width="18px" id="green_s" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#7CB06C"/>
+                                  <text x="6.5" y="13" fill="black">S</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+
+                                <svg height="18px" width="18px" id="teal_h" class="small-icons mt-lg-2">
+                                  <circle cx="9" cy="9" r="9px" fill="#00ABA9"/>
+                                  <text x="6.5" y="13" fill="black">H</text>
+                                  Sorry, your browser does not support inline SVG.
+                                </svg>
+                            </span>
                 </div>
             </div>
         </div>
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            sdf
+        </div>
     </div>
 
 
