completed bottom left 3/4 page content.

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -48,28 +48,28 @@
 
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center d-none d-sm-block">
         <div class="col">
             <hr>
         </div>
     </div>
 
-    <div class="row pt-md-5">
-        <div class="col-md-8">
+    <div class="row mt-5 mt-sm-3 mb-sm-3 mb-sm-0 mt-md-5">
+        <div class="col-sm-12 col-md-8 text-center text-md-left">
             <p>SELECTED WORK</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 d-none d-md-block">
             <p>THE LAST</p>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-12 col-md-8">
             <div class="row mb-md-5">
-                <div class="col-md-6">
+                <div class="col-sm-6">
                     <img src="img/apple-ipad.jpg" alt="" class="mx-auto d-block">
-                    <p class="featured ml-md-2 ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
-                    <span class="text-right ml-md-3 ml-lg-0 ml-xl-5 align-text-top">
+                    <p class="featured ml-4 ml-sm-3 ml-md-2 ml-lg-3 mt-lg-2 d-inline">FEATURED PROJECT</p>
+                    <span class="mr-4 mr-sm-3 mt-1 mt-lg-0 float-right">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
                                   <text x="6.5" y="13" fill="black">D</text>
@@ -95,10 +95,10 @@
                                 </svg>
                             </span>
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6 d-none d-sm-block">
                     <img src="img/macbook.jpg" alt="" class="mx-auto d-block">
-                    <p class="featured ml-md-2 ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
-                    <span class="text-right ml-md-3 ml-lg-0 ml-xl-5 align-text-top">
+                    <p class="featured ml-sm-3 ml-md-2 ml-lg-3 mt-lg-2 d-inline">FEATURED PROJECT</p>
+                    <span class="mr-4 mr-sm-3 mt-1 mt-lg-0 float-right">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
                                   <text x="6.5" y="13" fill="black">D</text>
@@ -125,11 +125,11 @@
                             </span>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row d-none d-sm-flex">
+                <div class="col-sm-6">
                     <img src="img/man.jpg" alt="" class="mx-auto d-block">
-                    <p class="featured ml-md-2 ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
-                    <span class="text-right ml-md-3 ml-lg-0 ml-xl-5 align-text-top">
+                    <p class="featured ml-sm-3 ml-md-2 ml-lg-3 mt-lg-2 d-inline">FEATURED PROJECT</p>
+                    <span class="mr-4 mr-sm-3 mt-1 mt-lg-0 float-right">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
                                   <text x="6.5" y="13" fill="black">D</text>
@@ -155,10 +155,10 @@
                                 </svg>
                             </span>
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-6">
                     <img src="img/security.jpg" alt="" class="mx-auto d-block">
-                    <p class="featured ml-md-2 ml-lg-3 mt-lg-2 d-inline mr-lg-5">FEATURED PROJECT</p>
-                    <span class="text-right ml-md-3 ml-lg-0 ml-xl-5 align-text-top">
+                    <p class="featured ml-sm-3 ml-md-2 ml-lg-3 mt-lg-2 d-inline">FEATURED PROJECT</p>
+                    <span class="mr-4 mr-sm-3 mt-1 mt-lg-0 float-right">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
                                   <circle cx="9" cy="9" r="9px" fill="#E6563B"/>
                                   <text x="6.5" y="13" fill="black">D</text>
@@ -186,7 +186,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 d-none d-md-block">
             sdf
         </div>
     </div>
