Added content for the list on XL

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -186,8 +186,31 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 d-none d-md-block">
-            sdf
+
+        <!-- Working on The List Box -Michael -->
+        <div class="col-md-4 d-none d-md-block pr-0">
+            <div>
+                <img class="the-list-img mr-3" src="img/mobile-phone.jpg" alt="Mobile Phone Data Secuirty">
+                <h2 class="text-left">THE ADMIN BAR AND ABSOLUTE POSITIONING</h2>
+            </div>
+            <br>
+            <div>
+                <img class="the-list-img mr-3" src="img/head.jpg" alt="3D rendered head">
+                <h2 class="text-left">NIBBLER AWESOME WEBSITE TESTING</h2>
+            </div>
+            <br>
+            <div>
+                <img class="the-list-img mr-3" src="img/ipad.jpg" alt="ipad with ranbow on screen">
+                <h2 class="text-left">HOW TO GET GOOGLE TO LIKE YOU</h2>
+            </div>
+            <div class="mt-5">
+                <img class="twitter-logo float-left mr-2" src="img/twitter-logo-small.png" alt="Twitter Logo">
+                <div class="tw-the-last float-left mt-1">LAST TWEET</div>
+                <div class="lor-tweet">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor dolorem
+                    error excepturi id iste itaque minima nisi nulla.
+                </div>
+            </div>
         </div>
     </div>
 
