Finished large icons at all breakpoints

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -36,20 +36,32 @@
         <div class="col-1"></div>
     </div>
     <!-- Added classes to each DIV DESIGN/DEVELOP/SUPPORT/HOST-->
-    <div class="row align-items-center text-center justify-content-center">
-        <div class="col-xl-1 icons ic-design m-3 rounded-circle border border-white text-white">
-            <span>DESIGN</span></div>
-        <div class="col-xl-1 icons ic-develop m-3 rounded-circle border border-white text-white">
-            <span>DEVELOP</span></div>
-        <div class="col-xl-1 icons ic-support m-3 rounded-circle border border-white text-white">
-            <span>SUPPORT</span></div>
-        <div class="col-xl-1 icons ic-host m-3 rounded-circle border border-white text-white">
-            <span>HOST</span></div>
-
+    <div class="row align-items-center text-center justify-content-center mt-sm-4 mb-sm-1 my-md-4 mt-lg-5 mb-lg-4">
+        <div class="col-6 col-sm-9 col-lg-6 col-xl-5 p-0">
+            <div class="row">
+                <div class="col-6 col-sm-3 p-0 mb-2 mb-sm-0">
+                    <div class="icons ic-design d-flex align-items-center justify-content-center text-white rounded-circle border border-white ml-auto mr-1 mx-sm-auto">
+                        <span>DESIGN</span>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-3 p-0 mb-2 mb-sm-0">
+                    <div class="icons ic-develop d-flex align-items-center justify-content-center text-white rounded-circle border border-white ml-1 mx-sm-auto">
+                        <span>DEVELOP</span></div>
+                </div>
+                <div class="col-6 col-sm-3 p-0">
+                    <div class="icons ic-support d-flex align-items-center justify-content-center text-white rounded-circle border border-white ml-auto mr-1 mx-sm-auto">
+                        <span>SUPPORT</span></div>
+                </div>
+                <div class="col-6 col-sm-3 p-0">
+                    <div class="icons ic-host d-flex align-items-center justify-content-center text-white rounded-circle border border-white ml-1 mx-sm-auto">
+                        <span>HOST</span></div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="row justify-content-center d-none d-sm-block">
-        <div class="col">
+    <div class="row justify-content-center d-none d-sm-flex">
+        <div class="col-sm-9 col-md-12">
             <hr>
         </div>
     </div>
