Completed resize of 'The Last' for xl/lg/md

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -70,7 +70,7 @@
         <div class="col-sm-12 col-md-8 text-center text-md-left">
             <p>SELECTED WORK</p>
         </div>
-        <div class="col-md-4 d-none d-md-block">
+        <div class="col-md-4 d-none d-md-block pl-0">
             <p>THE LAST</p>
         </div>
     </div>
@@ -200,7 +200,7 @@
         </div>
 
         <!-- Working on The List Box -Michael -->
-        <div class="col-md-4 d-none d-md-block pr-0">
+        <div class="col-md-4 d-none d-md-block pr-0 pl-0">
             <div>
                 <img class="the-list-img mr-3" src="img/mobile-phone.jpg" alt="Mobile Phone Data Secuirty">
                 <h2 class="text-left">THE ADMIN BAR AND ABSOLUTE POSITIONING</h2>
